@@ -1,6 +1,6 @@
 #! @PYTHON@
 #
-# Copyright (C) 1998-2009 by the Free Software Foundation, Inc.
+# Copyright (C) 1998-2010 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -198,7 +198,7 @@ def main():
                 else:
                     langs = [lang, mm_cfg.DEFAULT_SERVER_LANGUAGE]
                 mlist.Create(listname, owner_mail, pw, langs=langs,
-                             emailhost=host_name)
+                             emailhost=host_name, urlhost=urlhost)
             finally:
                 os.umask(oldmask)
         except Errors.BadListNameError, s:
